Add PROX math operator

--- a/tex/latex/mymathdefs/mymathdefs.sty
+++ b/tex/latex/mymathdefs/mymathdefs.sty
@@ -197,6 +197,7 @@
 \DeclareMathOperator{\DIM}{dim}
 \DeclareMathOperator{\EQDEF}{{\eqqcolon}}
 \DeclareMathOperator{\NULL}{N}
+\DeclareMathOperator{\PROX}{prox}
 \DeclareMathOperator{\RANGE}{range}
 \DeclareMathOperator{\RANK}{rank}
 \DeclareMathOperator{\SHOULDEQ}{{\,\stackrel{!}{=}\,}}
