Add myproposition environment

--- a/tex/latex/mytheorems/mytheorems.sty
+++ b/tex/latex/mytheorems/mytheorems.sty
@@ -19,6 +19,7 @@
 \declaretheorem[style=thmstyle, numbered=no, name=Theorem]{mytheorem*}
 \declaretheorem[style=thmstyle, sharenumber=mytheorem, name=Lemma]{mylemma}
 \declaretheorem[style=thmstyle, sharenumber=mytheorem, name=Corollary]{mycorollary}
+\declaretheorem[style=thmstyle, sharenumber=mytheorem, name=Proposition]{myproposition}
 
 \declaretheoremstyle[%
  spaceabove = 3ex,%
