Add embedding symbol and change weak convergence macros

--- a/tex/latex/mymathdefs/mymathdefs.sty
+++ b/tex/latex/mymathdefs/mymathdefs.sty
@@ -200,6 +200,7 @@
 \DeclareMathOperator{\DIAG}{diag}
 \DeclareMathOperator{\DIM}{dim}
 \DeclareMathOperator{\DIV}{div}
+\DeclareMathOperator{\EMBED}{\hookrightarrow}
 \DeclareMathOperator{\EQDEF}{{\eqqcolon}}
 \DeclareMathOperator{\GRAD}{grad}
 \DeclareMathOperator{\KER}{ker}
@@ -213,8 +214,8 @@
 \DeclareMathOperator{\SINC}{sinc}
 \DeclareMathOperator{\SPAN}{span}
 \DeclareMathOperator{\SUPP}{supp}
-\DeclareMathOperator{\WEAKLYTO}{\rightharpoonup}
-\DeclareMathOperator{\WEAKLYTO*}{\mathop{\rightharpoonup}^{*}}
+\DeclareMathOperator{\WEAKTO}{\rightharpoonup}
+\DeclareMathOperator{\WEAKTO*}{\mathop{\rightharpoonup}^{*}}
 
 % Other math stuff
 
