Add a couple of commands and simplify others

--- a/tex/latex/mymathdefs/mymathdefs.sty
+++ b/tex/latex/mymathdefs/mymathdefs.sty
@@ -6,10 +6,11 @@
 
 % Spaces
 
-\newcommand*{\SPACE}[1]{\ensuremath{\mathscr{#1}}}
+\newcommand*{\SPACE}[1]{\ensuremath{#1}}
 
 \newcommand*{\HILBERT}[2]{{\ensuremath{\SPACE{H}^{#1}\left( #2 \right)}}}
 \newcommand*{\SOBOLEV}[3]{{\ensuremath{\SPACE{W}^{#1, #2} \left( #3 \right)}}}
+\newcommand*{\BV}{{\ensuremath{\text{BV}}}}
 \newcommand*{\SPCX}{{\SPACE{X}}}
 \newcommand*{\SPCY}{{\SPACE{Y}}}
 \newcommand*{\SPCZ}{{\SPACE{Z}}}
@@ -50,35 +51,9 @@
 \newcommand*{\OPY}{{\OP{Y}}}
 \newcommand*{\OPZ}{{\OP{Z}}}
 
-\newcommand*{\DUALOPA}{{\DUAL{\OPA}}}
-\newcommand*{\DUALOPB}{{\DUAL{\OPB}}}
-\newcommand*{\DUALOPC}{{\DUAL{\OPC}}}
-\newcommand*{\DUALOPD}{{\DUAL{\OPD}}}
-\newcommand*{\DUALOPE}{{\DUAL{\OPE}}}
-\newcommand*{\DUALOPF}{{\DUAL{\OPF}}}
-\newcommand*{\DUALOPG}{{\DUAL{\OPG}}}
-\newcommand*{\DUALOPH}{{\DUAL{\OPH}}}
-\newcommand*{\DUALOPI}{{\DUAL{\OPI}}}
-\newcommand*{\DUALOPJ}{{\DUAL{\OPJ}}}
-\newcommand*{\DUALOPK}{{\DUAL{\OPK}}}
-\newcommand*{\DUALOPL}{{\DUAL{\OPL}}}
-\newcommand*{\DUALOPM}{{\DUAL{\OPM}}}
-\newcommand*{\DUALOPN}{{\DUAL{\OPN}}}
-\newcommand*{\DUALOPO}{{\DUAL{\OPO}}}
-\newcommand*{\DUALOPP}{{\DUAL{\OPP}}}
-\newcommand*{\DUALOPQ}{{\DUAL{\OPQ}}}
-\newcommand*{\DUALOPR}{{\DUAL{\OPR}}}
-\newcommand*{\DUALOPS}{{\DUAL{\OPS}}}
-\newcommand*{\DUALOPT}{{\DUAL{\OPT}}}
-\newcommand*{\DUALOPU}{{\DUAL{\OPU}}}
-\newcommand*{\DUALOPV}{{\DUAL{\OPV}}}
-\newcommand*{\DUALOPW}{{\DUAL{\OPW}}}
-\newcommand*{\DUALOPX}{{\DUAL{\OPX}}}
-\newcommand*{\DUALOPY}{{\DUAL{\OPY}}}
-\newcommand*{\DUALOPZ}{{\DUAL{\OPZ}}}
-
 \newcommand*{\FT}{\OP{F}}
 \newcommand*{\ID}{\OP{I}}
+\newcommand*{\TV}{{\ensuremath{\text{TV}}}}
 
 
 % Bold vectors
@@ -219,8 +194,10 @@
 
 % Other math stuff
 
+\newcommand*{\BIGO}[0]{\ensuremath{\mathcal{O}}}
 \newcommand*{\CCONJ}[1]{{\ensuremath{\overline{#1}}}}
 \newcommand*{\D}{{\ensuremath{\mathrm{d}}}}
+\newcommand*{\DUNION}{\ensuremath{\stackrel{.}{\cup}}}
 \newcommand*{\EQ}[0]{\ensuremath{\Leftrightarrow}}
 \newcommand*{\EPS}{{\ensuremath{\varepsilon}}}
 \newcommand*{\EVALAT}[3]{{\ensuremath{\left. \vphantom{g_{g_g}} {#1} \right|_{#2}^{#3}}}}
@@ -229,17 +206,16 @@
 \newcommand*{\HERM}[1]{{\ensuremath{#1^{\mathrm{H}}}}}
 \newcommand*{\I}[0]{\ensuremath{\mathit{i}}}
 \newcommand*{\IMAG}[0]{\ensuremath{\mathrm{Im}}}
-\newcommand*{\IND}{{\ensuremath{\iota}}}
+\newcommand*{\INDICATOR}{{\ensuremath{\iota}}}
 \newcommand*{\INV}[1]{\ensuremath{\frac{1}{#1}}}
 \newcommand*{\LAPLACE}[0]{\ensuremath{\varDelta}}
-\newcommand*{\LEQ}[0]{\ensuremath{\Longleftrightarrow}}
-\newcommand*{\ORD}[0]{\ensuremath{\mathcal{O}}}
-\newcommand*{\ORDS}[0]{\ensuremath{o}}
+\newcommand*{\LONGEQUIV}[0]{\ensuremath{\Longleftrightarrow}}
 \newcommand*{\PARTD}[2]{{\ensuremath{\frac{\partial #1}{\partial #2}}}}
 \newcommand*{\PDATZERO}[1]{{\ensuremath{\left. \frac{\partial}{\partial #1} \right|_{#1=0}}}}
 \newcommand*{\REAL}[0]{\ensuremath{\mathrm{Re}}}
+\newcommand*{\SMALLO}[0]{\ensuremath{o}}
 \newcommand*{\TRANSP}[1]{{\ensuremath{#1^{\mathrm{T}}}}}
-\newcommand*{\TS}[0]{\ensuremath{\textstyle}}
+\newcommand*{\TSTYLE}[0]{\ensuremath{\textstyle}}
 
 
 % Special sets
