Add lrcases environment

--- a/tex/latex/mymathdefs/mymathdefs.sty
+++ b/tex/latex/mymathdefs/mymathdefs.sty
@@ -229,5 +229,6 @@
 \newcommand*{\SPHERE}{\ensuremath{\mathcal{S}}}
 \newcommand*{\SCHWARZ}{\ensuremath{S}}
 
-
+% Custom math environments
+\newenvironment{lrcases}{\left\lbrace\begin{aligned}}{\end{aligned}\right\rbrace}
 
