Add some bold symbols

--- a/tex/latex/mymathdefs/mymathdefs.sty
+++ b/tex/latex/mymathdefs/mymathdefs.sty
@@ -119,6 +119,9 @@
 \newcommand*{\BDepsilon}{{\boldsymbol{\epsilon}}}
 \newcommand*{\BDeta}{{\boldsymbol{\eta}}}
 \newcommand*{\BDkappa}{{\boldsymbol{\kappa}}}
+\newcommand*{\BDmu}{\boldsymbol{\mu}}
+\newcommand*{\BDnu}{\boldsymbol{\nu}}
+\newcommand*{\BDsigma}{\boldsymbol{\sigma}}
 \newcommand*{\BDzeta}{{\boldsymbol{\zeta}}}
 \newcommand*{\BDomega}{{\boldsymbol{\omega}}}
 \newcommand*{\BDtheta}{{\boldsymbol{\theta}}}
