Add trace command

--- a/tex/latex/mymathdefs/mymathdefs.sty
+++ b/tex/latex/mymathdefs/mymathdefs.sty
@@ -192,6 +192,7 @@
 \DeclareMathOperator{\SINC}{sinc}
 \DeclareMathOperator{\SPAN}{span}
 \DeclareMathOperator{\SUPP}{supp}
+\DeclareMathOperator{\TRACE}{tr}
 \DeclareMathOperator{\WEAKTO}{\rightharpoonup}
 \DeclareMathOperator{\WEAKTO*}{\mathop{\rightharpoonup}^{*}}
 
