Add some bold symbols

--- a/tex/latex/mymathdefs/mymathdefs.sty
+++ b/tex/latex/mymathdefs/mymathdefs.sty
@@ -121,6 +121,7 @@
 \newcommand*{\BDkappa}{{\boldsymbol{\kappa}}}
 \newcommand*{\BDmu}{\boldsymbol{\mu}}
 \newcommand*{\BDnu}{\boldsymbol{\nu}}
+\newcommand*{\BDphi}{\boldsymbol{\phi}}
 \newcommand*{\BDsigma}{\boldsymbol{\sigma}}
 \newcommand*{\BDzeta}{{\boldsymbol{\zeta}}}
 \newcommand*{\BDomega}{{\boldsymbol{\omega}}}
@@ -134,6 +135,8 @@
 \newcommand*{\BDEta}{{\boldsymbol{\Eta}}}
 \newcommand*{\BDKappa}{{\boldsymbol{\Kappa}}}
 \newcommand*{\BDZeta}{{\boldsymbol{\Zeta}}}
+\newcommand*{\BDPhi}{\boldsymbol{\Phi}}
+\newcommand*{\BDSigma}{{\boldsymbol{\Sigma}}}
 \newcommand*{\BDOmega}{{\boldsymbol{\Omega}}}
 \newcommand*{\BDTheta}{{\boldsymbol{\Theta}}}
 \newcommand*{\BDXi}{{\boldsymbol{\Xi}}}
