Add some macros

--- a/tex/latex/mymathdefs/mymathdefs.sty
+++ b/tex/latex/mymathdefs/mymathdefs.sty
@@ -10,7 +10,7 @@
 
 \newcommand*{\HILBERT}[2]{{\ensuremath{\SPACE{H}^{#1}\left( #2 \right)}}}
 \newcommand*{\SOBOLEV}[3]{{\ensuremath{\SPACE{W}^{#1, #2} \left( #3 \right)}}}
-\newcommand*{\BV}{{\ensuremath{\text{BV}}}}
+\newcommand*{\BV}{{\ensuremath{\mathrm{BV}}}}
 \newcommand*{\SPCX}{{\SPACE{X}}}
 \newcommand*{\SPCY}{{\SPACE{Y}}}
 \newcommand*{\SPCZ}{{\SPACE{Z}}}
@@ -53,7 +53,7 @@
 
 \newcommand*{\FT}{\OP{F}}
 \newcommand*{\ID}{\OP{I}}
-\newcommand*{\TV}{{\ensuremath{\text{TV}}}}
+\newcommand*{\TV}{{\ensuremath{\mathrm{TV}}}}
 
 
 % Bold vectors
@@ -179,6 +179,7 @@
 \DeclareMathOperator{\DEFEQ}{{\coloneqq}}
 \DeclareMathOperator{\DET}{det}
 \DeclareMathOperator{\DIAG}{diag}
+\DeclareMathOperator{\DIAM}{diam}
 \DeclareMathOperator{\DIM}{dim}
 \DeclareMathOperator{\DIV}{div}
 \DeclareMathOperator{\EMBED}{\hookrightarrow}
